refactor : request 요청 값(sportName) 변경